--- a/public/css/main.css
+++ b/public/css/main.css
@@ -138,10 +138,10 @@ footer a {
 }
 
 #login {
-  width: 400px;
-  height: 150px;
+  /* width: 400px; */
+  /* height: 300px; */
   margin: 0 auto;
-  padding: 10px;
+  padding: 50px;
   position: absolute;
 }
 
